Fixed layout destruction for main content. Title banner still shifts.

--- a/css/canvas_style.css
+++ b/css/canvas_style.css
@@ -5,21 +5,26 @@ body
 
 #banner 
 {
+	overflow: hidden;
+	height: 100%;
 	background-color: #222222;
-	padding: 5px;
+	padding: 15px;
 	color: rgb(51, 181, 229);
 	font-family: Serif, Georgia;
+	min-width: 1012px;
 }
 
 #subban1
 {
 	margin-right: 50px;
+	
 }
 
 #subban1, #subban2
 {
 	display: inline-block;
 	text-align: center;
+	vertical-align: top;
 }
 
 #title
@@ -47,6 +52,7 @@ body
 	vertical-align: middle;
 	margin-left: 10%;
 	margin-right: 10%;
+	width: 924px;
 }
 
 #top_content 
